@@ -1,5 +1,5 @@
 ====НОВОСТИ ПРО ТИА====
-ТИА 45.0.0, июль 2018
+ТИА 45.1.0, август 2018
 ---------------------------------------
 http://semiletov.org/tea - офсайт
 http://tea.ourproject.org - второй офсайт
@@ -8,35 +8,8 @@ https://vk.com/teaeditor - сообщество TEA
 https://www.facebook.com/groups/766324686841748/ - FB-сообщество
 ---------------------------------------
 
-   Системы сборки.
-   Начиная с версии 4.6, вы можете  компилировать/устанавливать ТИА из исходника четырьми способами, использая различные подсистемы сборки и программы сборки, а именно сочетания: qmake+make (традиционно, как было), meson+ninja (используется мною внутреннее, самый быстрый способ), cmake+make, cmake+ninja. Читайте подробности в файле README.
-   Также, в каталог "specs", я положил примеры для RPM-спеков, по примеру для каждой сборки: qmake, cmake и meson.
-   Еще замечу, что новый ТИА наконец отвязался от Qt'шной версии библиотеки zlib и зависит теперь от общесистемной. 
-
-   Изменения и улучшения графического интерфейса.   
-   Я ненавижу изменения в интерфейсе, поэтому почти все таковые в ТИА можно отключать, и по умолчанию они таки отключены. Но бывают исключения, например вот я поменял дизайн строки состояния, и ничего тут не попишешь.
-   А вот Знаменитое поле ввода теперь можно переместить наверх, на тулбар, при помощи опции "Наладка - Интерфейс - ЗПВ наверху". 
-   Также, появилась настройка шрифта Логмемо отдельно от шрифта самого редактора.
-   Функция Профилей в меню Вид работает теперь как задумано, а задумана она так - вы можете сохранить текущие настройки интерфейса (шрифты, положение окна на экране, его размеры, параметры переноса строк, палитру) в поименованном профиле. И затем быстро восстановить эти настройки, выбрав профиль  в меню "Вид - Профили".
-   Например, я создал два профиля - один для работы с исходниками программ, другой для написания текстов. В первом профиле - шрифт Monospace, окно широкое, перенос слов выключен. Во втором - окно небольшое, другой шрифт, перенос слов включен. И я быстро переключаюсь между этими профилями, навесив на один сочетание клавиш Alt-1, а на другой Alt-2.
-   Некоторые люди не любят подсветку синтаксиса. Либо, не любят когда она тормозит на больших файлах. Для таких людей появилась опция "Наладка - Интерфейс - Подсветка синтаксиса включена", которую можно... Выключить.
-
-
-   ИДЕ.
-   В 46-м ТИА появилось новое меню - ИДЕ. Все обычно так и говорят - ИДЕ. Гуй да ИДЕ. Ну вместо гуя я пишу "графический интерфейс", а вот английское IDE пишу по-славянски, отчего слово это становится несколько загадочным.
-   Итак, ИДЕ. Подробности - в руководстве. Кратко же, ТИА предоставляет теперь легкую надстройку над обычными задачами по сборке программ, и делает это посредством введения понятия "проект". И соответственно появились сборка проекта, очистка проекта и запуск программы. Проект же не более чем обычный текстовый файл, но с параметрами для сборки, запуска и так далее. Вы можете создать несколько файлов-проектов (с разными параметрами сборки - например, один для мезона, другой для cmake, один для GCC, другой для Clang) для одной и той же программы, и быстро переключаться между ними.
-   При выполнении сборки, в Логмемо будет отображаться ее ход. Если дважды щелкнуть мышью по ошибке или предупреждении (там, где формат имя файла:строка:столбец), то ТИА откроет файл в нужном месте.
-
-   Поддержка нового формата.
-   Ничего революционного, просто ТИА научился читать текст из EPUB.
-
-   Внутренние изменения, исправления.
-   ТИА теперь использует новую версию библиотеки Quazip. Эта библиотека нужна для работы с зип-архивами, а также поддержки форматов вроде ODT и DOCX, которые вообще говоря тоже зип-архивы.
-   Проверка правописания работает гораздо быстрее после того, как я перестал обновлять индикатор продвижения этого дела после каждого проверенного слова. 
-   Перенос строк полностью переработан и работает как часы. Но вот параметр переноса строк в файлах подсветки синтаксиса убран, чтобы не усложнять дело.
-   Палитры теперь поддерживают более широкий набор элементов подсветки, так что подсветка хорошо выглядит при любой палитре.
-   Параметр "--m" в командной строке запускает ТИА в режиме, когда разрешено несколько одновременно запущенных копий вместо одной. 
-   Ну и много чего еще исправлено и добавлено.
-
+   После выпуска 46 вылезло много ошибок, особенно в связи с поддержкой Qt 4.x. Теперь всё починено.
+   Также исправлена функция log от Логмемо, которую снова можно вызывать из джава-скриптов.
+   Добавлена поддержка Objective C (подсветка, переключение заголовок/исходник).
 
    С кирпичным пролетарским приветом, Петр Семилетов!
